Closed
Bug 119263
Opened 24 years ago
Closed 22 years ago
[ps] printed page prints images in different sizes
Categories
(Core :: Printing: Output, defect, P1)
Tracking
()
RESOLVED
FIXED
Future
People
(Reporter: raphael, Assigned: tor)
References
()
Details
(Keywords: fixed1.5)
Attachments
(8 files)
|
6.63 KB,
image/png
|
Details | |
|
8.66 KB,
image/png
|
Details | |
|
11.50 KB,
image/png
|
Details | |
|
50.85 KB,
image/gif
|
Details | |
|
191.14 KB,
application/gzip
|
Details | |
|
107.68 KB,
application/gzip
|
Details | |
|
191.06 KB,
application/gzip
|
Details | |
|
8.43 KB,
patch
|
pavlov
:
review+
darin.moz
:
superreview+
asa
:
approval1.5+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (X11; U; SunOS sun4u; en-US; rv:0.9.7+) Gecko/20011221
BuildID: 2001122110
When viewing the "print preview" for the web page text is shown on top of other
text, the images are split between pages (half an image on one page, half on the
next) and the title "Observed Extent ..." runs off the page to the right. When
the page is printed these problems go away but the image at the top of page 4 is
completely squashed to a fraction of its normal height. The printed version and
the print preview version also seem to have quite different font sizes and so
the pages do not correspond at all
The printer is a postscript LaserJet 4000N. The OS sparc solaris 2.8. There is
no later version of mozilla to test as the nightly builds are currently broken.
Reproducible: Always
Steps to Reproduce:
1. Go to the web page. Look at it.
2. Click print preview and look at it.
3. Print and look at the results.
Actual Results: web page, print preview and actual printed page all different
Expected Results: The web page is rendered the most correctly. The print
preview and actual printed page should be more like the web page (no overtyped
text, text dissapearing off the right, split images). Also the print preview
should correspond exactly to the printed page
are you sure you're not just seeing symptoms of bug 117072 ?
| Reporter | ||
Comment 2•24 years ago
|
||
I think the print preview problems are pretty much covered by that bug but the
actual printed page is still wrong. The images are printed at different sizes
seemingly at random including one (at the top of page 4) that is completely
squashed.
ok so to clarify the problem here is that
the printed page does not match what the page looks like
on the screen.
Boris, do we have a bug on this one somewhere?
Summary: Both print preview and printed page incorrect but different → printed page prints images in different sizes
| Reporter | ||
Comment 5•24 years ago
|
||
Do you get the overtyped text in the title "Note on the derivation of the genes
in this study" where the end of the word "study" is printed on top of the next
sentence starting "(See my NAR paper ..." in Windows? This occurs when printed
to a postscript printer from solaris.
No...On windows I get the following printed:
"...in this study (see my NAR paper..."
so looks like it is printing properly on Linux.
I made a type in my last comment...
It prints properly on Windows...I have not tried Linux...
Thanks Raphael.
Comment 8•24 years ago
|
||
I see even worse results trying to print from Build ID 2002020516 on Solaris.
I tried to print this page:
http://www-ccrma.stanford.edu/~jos/fp2/System_Diagram.html
The little icons at the top seem to get expanded to cover the whole page.
I've noticed, in general, many images seem to blow up to cover the page
when printing, including even the mozilla.org image at the top of this page:
http://bugzilla.mozilla.org/show_bug.cgi?id=119263
(Don't you just love bug reports that refer to themselves?)
I'll add some attachments for the above two links to show what it looks like.
Printing is essentially useless for me for most pages I visit.
Comment 9•24 years ago
|
||
Page 1 of printout for this page:
http://www-ccrma.stanford.edu/~jos/fp2/System_Diagram.html#fig:kfig2p8
Printed with Build ID 2002020516 under Solaris 2.8.
Comment 10•24 years ago
|
||
Page 2 of printout for this page:
http://www-ccrma.stanford.edu/~jos/fp2/System_Diagram.html#fig:kfig2p8
Printed with Build ID 2002020516 under Solaris 2.8.
Comment 11•24 years ago
|
||
Page 1 (of 4) of printout for this page:
http://bugzilla.mozilla.org/show_bug.cgi?id=119263
Printed with Build ID 2002020516 under Solaris 2.8.
(Incidentally, all three of these PNGs were produced w/ Ghostscript, though
I see similar results when I send the .ps file to the Laserwriter 8500.)
Comment 12•24 years ago
|
||
In contrast, print preview seems to *mostly* work ok. The "System Diagram"
page I linked above shows up fine in Print Preview on Build ID 2002020516
in Solaris. The Show-Bug page still shows up a bit wacky, as shown in this
attachment. I suspect the wackiness here is limited to not cropping objects
to page boundaries, etc.
Comment 13•24 years ago
|
||
I can confirm this bug in the Sparc Solaris nighly build 2002051322 for the
postscript print module. There does seem to be a lot of improvement, though.
Both bugzilla's show bug page and
http://www-ccrma.stanford.edu/~jos/fp2/System_Diagram.html print fine for me now.
The original page for this bug,
http://industry.ebi.ac.uk/~thanaraj/gene_altSplice.html, still has at least one
problem. The image at the bottom of page 2 of my printout (which I'll attach)
is squashed.
The page prints fine with the xprint module, presumably because the xprint
module is able to divide the picture across 2 pages.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•24 years ago
|
Summary: printed page prints images in different sizes → [ps] printed page prints images in different sizes
Comment 14•24 years ago
|
||
Comment 15•24 years ago
|
||
Updated•24 years ago
|
Attachment #83542 -
Attachment description: Correct sprint version of test page (gzipped) → Correct sprint version of test page (gzipped; 600 DPI)
| Reporter | ||
Comment 16•24 years ago
|
||
When I print the web page to a file using the postscript option I get a
different (worse) output. Build is 2002051322 uname -a SunOS willa 5.8
Generic_108528-13 sun4u sparc SUNW,Ultra-5_10. Attachment to follow.
| Reporter | ||
Comment 17•24 years ago
|
||
This is the result of printing to file using postscript. The pictures are
squashed at the bottom of page 2 and the top of page 4. The picture below the
squashed one on page 4 also seems to be "stretched" to be larger than it should
be.
Updated•24 years ago
|
Attachment #83726 -
Attachment mime type: application/octet-stream → application/gzip
| Reporter | ||
Comment 18•24 years ago
|
||
In fact, the attachment I gave is the same as the one numbered 83539 above. My
mistake. The other comments I made about the squashed and stretched images are
still valid.
| Reporter | ||
Comment 19•24 years ago
|
||
The URL http://biolinx.bios.niu.edu/bios546/gd_mod.htm is another example of
where the pictures are squashed as to be unreadable. This time I am using rc3
(uname -a SunOS willa 5.8 Generic_108528-13 sun4u sparc SUNW,Ultra-5_10) and
the problem with the printed web page (to the same postscript laserjet 4000N)
printer are as follows.
At the bottom of page three the picture titles "An example" is printed
completely squashed. It is then printed fully st the top of the next page. So
the picture is effectively printed twice!
Interestingly print preview is also wrong but in a different way. It has only
the top of the image at the bottom of the second page (at the correct scale) and
then the whole of the image again at the top of the third page.
Updated•23 years ago
|
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → Future
Comment 20•22 years ago
|
||
Requesting as blocking 1.5 as this is a very visible and ugly bug that might get
us some bad press when a reviewer sees it.
Bug 125276 and 131970 look like dupes---same symptoms, but on different OSes
(WinXP and Linux).
Flags: blocking1.5?
| Assignee | ||
Comment 21•22 years ago
|
||
For the testurl page, it appears as though the print layout is attempting to
split the images, but the gfx end isn't respecting the partial image draw so
you get these squashed versions of images instead of a partial chunk.
Updated•22 years ago
|
Flags: blocking1.5? → blocking1.5+
Is the image splitting problem a duplicate of bug 130568?
| Assignee | ||
Comment 23•22 years ago
|
||
Attachment #130926 -
Flags: review?(pavlov)
Updated•22 years ago
|
Attachment #130926 -
Flags: review?(pavlov) → review+
Attachment #130926 -
Flags: superreview?(darin)
Comment 25•22 years ago
|
||
Comment on attachment 130926 [details] [diff] [review]
respect image source/destination rectangles in postscript gfx
sr=darin
Attachment #130926 -
Flags: superreview?(darin) → superreview+
| Assignee | ||
Comment 26•22 years ago
|
||
Checked in on trunk.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 27•22 years ago
|
||
Comment on attachment 130926 [details] [diff] [review]
respect image source/destination rectangles in postscript gfx
Requesting 1.5 branch approval because this bug is labeled as a 1.5 blocker and
has a reviewed patch.
Attachment #130926 -
Flags: approval1.5?
Comment 28•22 years ago
|
||
Comment on attachment 130926 [details] [diff] [review]
respect image source/destination rectangles in postscript gfx
a=asa (on behalf of drivers) for checkin to the Mozilla 1.5 branch. Please add
the fixed1.5 keyword when this is landed on the branch. Thanks.
Attachment #130926 -
Flags: approval1.5? → approval1.5+
| Assignee | ||
Comment 30•22 years ago
|
||
*** Bug 130568 has been marked as a duplicate of this bug. ***
Comment 31•22 years ago
|
||
Thank you *very* *much* for getting this fixed!
This was one of my last remaining "pet peeves" about Mozilla.
I tried out the 2003100404 build, and it appears to be working correctly!
:-)
You need to log in
before you can comment on or make changes to this bug.
Description
•