Bug 119263 - split images duplicated and warped in postscript output. r=pavlov, sr=darin